# rust-gui-template

./: CLAUDE.md  Cargo.toml  Makefile  README.md  SYNC.md  cargo-generate.toml  clippy.toml
.github/workflows/: build.yml
apps/gui/: eslint.config.mjs  index.html  package.json
apps/gui/src/: App.tsx  i18n.ts  types.ts
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/src/: lib.rs  main.rs  monitor.rs
apps/gui/src/components/: Header.tsx  ProcessTable.tsx  Sidebar.tsx  Sparkline.tsx  StatCard.tsx  StatusBar.tsx
apps/gui/src/hooks/: useSystemSnapshot.ts
apps/gui/src/pages/: About.tsx  Dashboard.tsx  Processes.tsx
docs/: architecture.md  gui-patterns.md  index.md
