[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
toml = "0.8.23"
tempfile = "3"
secrecy = "0.11"

# Tauri framework
tauri = "2"
tauri-build = "2"
tauri-plugin-shell = "2"

# System data (for demo dashboard)
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }

# workspace crates
{{ project-name }}-core = { path = "crates/core" }
{{ project-name }}-gui = { path = "apps/gui/src-tauri" }

[workspace.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.25"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
todo = "deny"
dbg_macro = "deny"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unwrap_in_result = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
allow_attributes_without_reason = "warn"
pedantic = "warn"
cargo = "warn"
indexing_slicing = "warn"
similar_names = "allow"
module_name_repetitions = "allow"
