[package]
name = "{{ project-name }}-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "{{ project-name }}-gui"
path = "src/main.rs"

[dependencies]
{{ project-name }}-core = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}
tracing-appender = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[lints]
workspace = true

[lints.rust]
unsafe_code = "deny"
